ARIES-2166: Fix web url handler in org.eclipse.osgi > 3.17.0